# bitcoin-alerts

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  update.sh
doc/: bitcoin-alerts.service  build-unix.md  build.md  config-example.toml  configuration.md
src/: db.rs  logger.rs  main.rs  primitives.rs  util.rs
src/bitcoin/: constants.rs  mod.rs  processor.rs  rpc.rs
src/bot/: autojoin.rs  mod.rs
src/common/: db.rs  mod.rs  thread.rs
src/config/: mod.rs  model.rs
src/db/: bitcoin.rs  matrix.rs  mod.rs  notification.rs  rocks.rs
src/dispatcher/: mod.rs  nostr.rs  ntfy.rs
src/dispatcher/matrix/: autojoin.rs  mod.rs
