[package]
name = "bitcoin-alerts"
version = "0.1.0"
edition = "2021"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/yukibtc/bitcoin-alerts"
repository = "https://github.com/yukibtc/bitcoin-alerts.git"
license = "MIT"
readme = "README.md"
rust-version = "1.80.0"
keywords = ["bitcoin", "alerts", "notifications"]

[dependencies]
bitcoin = "0.32"
bitcoin-rpc = { git = "https://github.com/yukibtc/bitcoin-rpc", rev = "172da01c232c5745b82b68c2ab09dc358576f1a4" } # TODO: use bitcoincore-rpc instead
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
nostr-sdk = { version = "0.36", default-features = false }
ntfy = "0.6"
rocksdb = { version = "0.22", default-features = false, features = ["multi-threaded-cf", "zstd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
