[package]
name = "bitcoin-alerts"
version = "0.1.0"
edition = "2021"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/yukibtc/bitcoin-alerts"
repository = "https://github.com/yukibtc/bitcoin-alerts.git"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "alerts", "notifications"]

[dependencies]
bitcoin = "0.32"
bitcoincore-rpc = "0.19"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
nostr-sdk = { version = "0.39", default-features = false }
ntfy = "0.6"
rocksdb = { version = "0.22", default-features = false, features = ["multi-threaded-cf", "zstd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
